<resources>
    <string name="app_name">KidsApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="question">Question%1$d of %2$d</string>
    <string name="image_description">picture of animal</string>
    <string name="guess_animal">Guess the animal</string>
    <string name="spelling_buton_label">Spelling</string>
    <string name="math_button_label">Math</string>
    <string name="shapes_button_label">Shapes</string>
    <string name="grammer_button_label">Grammer</string>
    <string name="reading_button_label">Reading</string>
    <string name="science_button_label">Science</string>
    <string name="menu_main_text">Choose A Quiz!</string>
    <string name="answer">Answer</string>
    <string name="submit">Submit</string>
    <string name="textview">textView</string>
    <string name="title_activity_math_quiz">MathQuiz</string>
    <string name="history_button_label">History</string>
    <string name="next_button">Next</string>
    <string name="guess_shape">Guess the Shape</string>
    <string name="editText_digits">0123456789</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
</resources>