<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/menuLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity"
        android:weightSum="10"
        android:background="@drawable/kids_app_background">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <RelativeLayout
            android:id="@+id/titleLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/menu_main_text"
                android:fontFamily="@font/fredoka_one_regular"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:textSize="44sp"
                android:textStyle="bold"
                android:background="#FFEA00"
                android:textColor="#000000"
                />

        </RelativeLayout>

        <GridLayout
            android:layout_weight="6"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:columnCount="2"
            android:rowCount="3"
            android:alignmentMode="alignMargins"
            android:padding="14dp"

            >

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_column="0"
                android:layout_row="0"
                android:id="@+id/mathQuizButton"
                android:layout_margin="14dp"
                android:text="@string/math_button_label"
                android:textSize="26sp"
                android:fontFamily="@font/fredoka_one_regular"
                android:textColor="@android:color/black"
                android:background="@android:color/holo_orange_dark"
                android:onClick="math"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_column="1"
                android:layout_row="0"
                android:id="@+id/scienceQuizButton"
                android:layout_margin="14dp"
                android:text="@string/science_button_label"
                android:textSize="26sp"
                android:fontFamily="@font/fredoka_one_regular"
                android:textColor="@android:color/black"
                android:background="@android:color/holo_orange_light"
                android:onClick="science"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_column="0"
                android:layout_row="1"
                android:id="@+id/readingQuizButton"
                android:layout_margin="14dp"
                android:text="@string/reading_button_label"
                android:textSize="26sp"
                android:fontFamily="@font/fredoka_one_regular"
                android:textColor="@android:color/black"
                android:background="#76FF03"
                android:onClick="reading"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_column="1"
                android:layout_row="1"
                android:id="@+id/historyQuizButton"
                android:layout_margin="14dp"
                android:text="@string/history_button_label"
                android:textSize="26sp"
                android:fontFamily="@font/fredoka_one_regular"
                android:textColor="@android:color/black"
                android:background="#D500F9"
                android:onClick="history"
                />

        </GridLayout>
</LinearLayout>